# PianoOS

./: .gitignore  .swp  Cargo.toml  Makefile  README.md  ch1.md  ch2.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
os/: Cargo.toml  Makefile  build.rs
os/src/: batch.rs  config.rs  console.rs  devicetree.rs  elf.rs  elfInfo.rs  error.rs  global.rs  harts.rs  link_app.S  loader.rs  logging.rs  macros.rs  main.rs  platform.rs  test.rs
os/src/arch/: mod.rs
os/src/arch/common/: hart.rs  mod.rs  trap.rs
os/src/arch/loongarch64/: entry.rs  hart.rs  mod.rs  trap.rs
os/src/arch/riscv/: entry.rs  hart.rs  harts.rs  isa.rs  mem.rs  mod.rs  power.rs  time.rs  trap.rs
os/src/arch/riscv/trap/: handler.rs  mod.rs
os/src/driver/: mod.rs
os/src/driver/chardev/: mod.rs  riscvsbi.rs  uart16550.rs
os/src/mm/: addr_space.rs  address.rs  frame_allocator.rs  heap.rs  mod.rs  page_table.rs  stack.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  syscallid.rs
os/src/task/: block.rs  context.rs  harts.rs  mod.rs  status.rs
os/src/trap/: entire.rs  fast.rs  mod.rs
src/: config.rs  console.rs  devicetree.rs  entry.asm  error.rs  lang_items.rs  linker.ld  logging.rs  macros.rs  main.rs  platform.rs  sbi.rs
src/arch/: hart.rs  mod.rs
src/driver/: mod.rs
src/mm/: heap.rs  stack.rs
src/sbi/: hart.rs  mod.rs
user/: Cargo.toml  Makefile  build.rs
user/elf/: 00hello_world  01store_fault  02power  03priv_inst  04priv_csr  05task_id  06test1_write0  07test1_write1  08write_a  09write_b  10write_c  11power_3  (+4 more)
xtask/: Cargo.toml
(+18 files in other folders)
