[package]
name = "PianoOS"
version = "0.1.0"
edition = "2024"

[dependencies]
sbi-rt = { git = "https://github.com/rustsbi/rustsbi", package = "sbi-rt"}
riscv = { version = "0.15.0" }
log = "0.4.28"
serde = { version = "1.0.227", default-features = false, features = ["derive"] }
serde-device-tree = { git = "https://github.com/rustsbi/serde-device-tree", rev = "805718b", default-features = false, features = ["ser"] }
buddy_system_allocator = "0.11.0"
uart16550 = "0.0.1"
spin = "0.10.0"
